--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,21 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 37,
-"scroll_position": 31.0,
+"scroll_position": 36.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://pathfind_astar.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
