--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -2,6 +2,8 @@
 
 executable_path="C:/GODOT/Godot_v4.2.1-stable_win64.exe"
 tile_source_sort=0
+tile_snap_option=0
+tile_snap_subdiv=4.0
 
 [debug_options]
 
@@ -20,7 +22,17 @@ TileMap:scale=true
 CPUParticles2D:scale=true
 Marker2D:scale=true
 Sprite2D:scale=true
+Camera2D:zoom=true
+Camera2D:scale=true
+CanvasModulate:scale=true
+PointLight2D:scale=true
+MultiNodeEdit:scale=true
 
 [dialog_bounds]
 
 project_settings=Rect2(740, 200, 900, 700)
+create_new_node=Rect2(1642, 3136, 1800, 1400)
+
+[color_picker]
+
+recent_presets=PackedColorArray(0.120418, 0.120418, 0.120418, 1, 0.201024, 0.0281107, 0.217025, 1, 0.596078, 0, 0, 0, 0.596078, 0, 0, 0.678431, 0.2, 0.027451, 0.215686, 1, 0.119867, 0.0110755, 0.130629, 1, 1, 1, 1, 1, 0.0523258, 0.00355849, 0.0570941, 1)
