--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .import/
 export.cfg
 export_presets.cfg
-
+.godot/editor/
 # Imported translations (automatically generated from CSV files)
 *.translation
 
