--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 export.cfg
 export_presets.cfg
 .godot/editor/
+*.bin
+
 # Imported translations (automatically generated from CSV files)
 *.translation
 
